@@ -1,52 +1,57 @@
 package com.ursuradu.maze;
 
+import static com.ursuradu.maze.enums.MazeDrawStyle.BRIDGES;
+import static com.ursuradu.maze.enums.MazeDrawStyle.CLASSIC;
+import static com.ursuradu.maze.enums.PathRequirements.CONTAIN_ALL_PORTALS;
+import static com.ursuradu.maze.enums.PathRequirements.PATH_LENGTH_MAX;
+import static com.ursuradu.maze.enums.PathRequirements.START_FROM_LEFT;
+
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Stream;
+
 import com.ursuradu.maze.config.GenerationBatchConfig;
 import com.ursuradu.maze.config.MazeConfig;
 import com.ursuradu.maze.enums.MazeSize;
 import com.ursuradu.maze.enums.PathRequirements;
 
-import java.util.Collections;
-import java.util.stream.Stream;
-
-import static com.ursuradu.maze.enums.MazeDrawStyle.BRIDGES;
-import static com.ursuradu.maze.enums.MazeDrawStyle.CLASSIC;
-
 public class Main {
 
-    public static void main(final String[] args) throws Exception {
+  public static void main(final String[] args) throws Exception {
 
-        final GenerationBatchConfig batchConfig = GenerationBatchConfig.builder()
-                .numberOfMazes(10)
-                .combinedImages(false)
-                .exportPngs(true)
-                .openSolutionInBrowser(false)
-                .openMazesInBrowser(false)
-                .mazeConfigs(Stream.of(
+    final GenerationBatchConfig batchConfig = GenerationBatchConfig.builder()
+        .numberOfMazes(1)
+        .combinedImages(false)
+        .exportPngs(true)
+        .openSolutionInBrowser(false)
+        .openMazesInBrowser(false)
+        .folderNameSuffix("printPreviewTest")
+        .mazeConfigs(Stream.of(
 //                        getMazeConfigBuilder()
 //                                .displayName("bridges")
 //                                .style(BRIDGES)
 //                                .size(MazeSize.MAZE_SIZE_11_16)
 //                                .portalsCount(5)
 //                                .build(),
-                        MazeConfig.builder()
-                                .displayName("10 portals not all contained in path")
-                                .style(CLASSIC)
-                                .size(MazeSize.MAZE_SIZE_16_22)
+            MazeConfig.builder()
+                .displayName("test")
+                .style(CLASSIC)
+                .size(MazeSize.MAZE_SIZE_17_11)
 //                                .onTheFlyPortals(OnTheFlyPortals.SMALL_RATE)
-                                .pathRequirements(Collections.singletonList(PathRequirements.DONT_CONTAIN_ALL_PORTALS))
-                                .portalsCount(10)
-                                .build()
-                ).toList())
-                .build();
+                .pathRequirements(List.of(CONTAIN_ALL_PORTALS, PATH_LENGTH_MAX, START_FROM_LEFT))
+                .portalsCount(1)
+                .build()
+        ).toList())
+        .build();
 
-        new MazeApp().start(batchConfig);
-    }
+    new MazeApp().start(batchConfig);
+  }
 
-    private static MazeConfig.MazeConfigBuilder getMazeConfigBuilder() {
-        return MazeConfig.builder()
-                .size(MazeSize.MAZE_SIZE_12_17)
-                .portalsCount(5)
-                .pathRequirements(Collections.singletonList(PathRequirements.DONT_CONTAIN_ALL_PORTALS))
-                .style(BRIDGES);
-    }
+  private static MazeConfig.MazeConfigBuilder getMazeConfigBuilder() {
+    return MazeConfig.builder()
+        .size(MazeSize.MAZE_SIZE_12_17)
+        .portalsCount(5)
+        .pathRequirements(Collections.singletonList(PathRequirements.DONT_CONTAIN_ALL_PORTALS))
+        .style(BRIDGES);
+  }
 }
